# AliTran

./: CMakeLists.txt  README.md  aliapi.cpp  aliapi.h  apioption.cpp  apioption.h  apioption.ui  curl.cpp  curl.h  global.cpp  global.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  readwritefile.cpp  readwritefile.h  resources.qrc  tranlanguage.cpp  tranlanguage.h  tranoption.cpp  tranoption.h  tranoption.ui  zh.ts
